2009-03-08  Martin Lambers <marlam@marlam.de>

	* Various bug fixes related to the move to git and the update of GLVM.

2009-03-07  Martin Lambers <marlam@marlam.de>

	* Gnulib update.

2008-02-03  Martin Lambers <marlam@marlam.de>

	* Gnulib update.
	* GLVM update.
	* build-aux/glew.m4, build-aux/cvl.m4, build-aux/qt4.m4, configure.ac,
	src/Makefile.am: Improve library detection.

2008-12-03  Martin Lambers <marlam@marlam.de>

	* gllib/*, src/view_area.cpp, src/rotation_selector.cpp: Update glvm 
	(many improvements).

2008-10-14  Martin Lambers <marlam@marlam.de>

	* gnulib/*: Gnulib update.
	* Get rid of libtool, and improve library detection.

2008-08-25  Martin Lambers <marlam@marlam.de>

	* gllib/glvm.h, gllib/glvm-gl.h, gllib/glvm-color.h: Update glvm (many
	improvements).

2008-08-18  Martin Lambers <marlam@marlam.de>

	* src/cvlview.cpp: Enable all toolbar widgets manually, as a
	workaround for a regression in Qt 4.4.

2008-08-15  Martin Lambers <marlam@marlam.de>

	* glvm/glvm.h: Include <limits>. Fixes compilation with g++-4.3.

2008-07-25  Martin Lambers <marlam@marlam.de>

	* NEWS: Update for version 0.3.1.

2008-07-22  Martin Lambers <marlam@marlam.de>

	* gnulib/*: Gnulib update.
	* configure.ac, doc/cvlview.1, doc/cvlview.texi: Bump version to
	0.3.1.
	* configure.ac: Require CVL >= 0.2.5.
	* gnulib/alloca.h: Remove generated file from SVN.
	* build-aux/glew.m4, build-aux/cvl.m4, configure.ac, src/Makefile.am:
	Improve detection and usage of external libraries.
	* build-aux/depcomp, build-aux/Makefile.am, build-aux/config.guess, 
	build-aux/config.sub, build-aux/ltmain.sh, build-aux/install-sh,
	configure.ac, gnulib/m4/gnulib-comp.m4, gnulib/m4/gnulib-cache.m4,
	gnulib/Makefile.am, src/Makefile.am, gllib/Makefile.am,
	mhlib/Makefile.am: Use libtool to get linking right.
	* build-aux/Makefile.am: Update.

2008-07-04  Martin Lambers <marlam@marlam.de>

	* src/cvlview.cpp, src/dataset_selector.h: Show progress bar when