@@ -1,3 +1,9 @@
+2009-04-17  Martin Lambers <marlam@marlam.de>
+
+	* src/view_area.c: Fix bug caused by invalid assumptions about
+	internal texture formats used by CVL. This bug was exposed by today's
+	CVL change to use GL_ARB_texture_rg when available.
+
 2009-03-08  Martin Lambers <marlam@marlam.de>
 
 	* Various bug fixes related to the move to git and the update of GLVM.
